[package]
name = "rustalot"
version = "0.1.0"
authors = ["Keane O'Kelley <me@keane.space>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rustalot"
path = "src/lib.rs"

[[bin]]
name = "rustalot_test"
path = "src/bin/test.rs"

[dependencies]
threadpool = "1.8.1"
regex = "1"
lazy_static = "1.4.0"
percent-encoding = "2.1.0"
boolinator = "2.4.0"